# ai-class

./: .env.example  .gitignore  LICENSE  README.md  diff_output.txt  run_tests.py
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-data-contract-schema.md  1-2-upload-with-global-singleton-queue.md  1-3-memory-safe-hierarchical-rag-extraction.md  (+16 more)
backend/: .env.example  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: chat.py  documents.py  health.py  review.py
backend/app/core/: config.py  exceptions.py  llm_config.py
backend/app/graph/: __init__.py  orchestrator.py  state.py
backend/app/graph/nodes/: __init__.py  escape.py  guardrails.py  hint.py  llm_runtime.py  prune.py  question_gen.py  retrieve.py  validate.py
backend/app/graph/prompts/: question_gen_prompts.py  tutor_prompts.py  validator_prompts.py
backend/app/migrations/: 003_add_question_history.sql
backend/app/schemas/: __init__.py  hint.py  knowledge_tree.py  queue.py  quiz.py  review.py  validation.py
backend/app/services/: pdf_parser.py  processing_queue.py  question_generator.py  review_service.py  vector_store.py
backend/data/: .gitkeep
backend/tests/: conftest.py  test_chat_sse.py  test_documents_tree.py  test_graph_state.py  test_guardrails_node.py  test_health.py  test_integration.py  test_llm_node_behavior.py  test_llm_prompt_contracts.py  test_orchestrator_feedback_e2e.py  test_orchestrator_guardrails.py  test_pdf_parser.py  test_prune_node.py  test_question_gen.py  test_quiz_api.py  test_retrieve_node.py  test_review_api.py  test_review_integration.py  test_review_service.py  test_schemas.py  test_upload_queue.py  test_validate_hint_nodes.py  test_vector.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+32 files in other folders)
