[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "colorama==0.4.6",
    "distro==1.9.0",
    "exceptiongroup==1.3.1",
    "fastapi==0.135.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jiter==0.13.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "langchain-core==1.2.23",
    "langchain-openai==1.1.12",
    "langgraph==1.1.3",
    "langgraph-checkpoint==4.0.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-prebuilt==1.0.8",
    "langgraph-sdk==0.3.12",
    "langsmith==0.7.23",
    "openai==2.30.0",
    "orjson==3.11.7",
    "ormsgpack==1.12.2",
    "packaging==26.0",
    "pluggy==1.6.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pygments==2.20.0",
    "pymupdf==1.27.2.2",
    "pytest==9.0.2",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "regex==2026.3.32",
    "requests==2.33.1",
    "requests-toolbelt==1.0.0",
    "sniffio==1.3.1",
    "sqlite-vec==0.1.8",
    "starlette==1.0.0",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "tomli==2.4.1",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uvicorn==0.42.0",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
